# snakepp

./: CMakeLists.txt  README.md  helper.hpp  snake.cpp  test_container.cpp  test_op_overloading.cpp  test_overlap.cpp  test_resize.cpp  test_widgets.cpp  test_window.cpp  widgets.hpp  widgets_prime.hpp
.cache/clangd/index/: snake.cpp.ACC6E7E4D3433EF1.idx
